Bug 840569 - Inline caches for comparing numbers with undefined, bools with each other, r=djvj.